--- a/reactive-web/build.gradle
+++ b/reactive-web/build.gradle
@@ -8,7 +8,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
-    project(":reactive-db")
+    implementation project(":reactive-db")
     runtimeOnly 'org.postgresql:r2dbc-postgresql'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
